# WeatherStation-ESP32-BaseStation-SquareLineStudio

./: .gitignore  README.md  SquareLine_Project.sll  SquareLine_Project.spj  SquareLine_Project_events.py
Export/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.h
Export/ui/fonts/: ui_font_FreeSans16.c  ui_font_FreeSans26.c  ui_font_FreeSans30.c  ui_font_FreeSansBold62.c
Export/ui/images/: ui_img_01d_png.c  ui_img_01n_png.c  ui_img_02d_png.c  ui_img_02n_png.c  ui_img_03d_png.c  ui_img_03n_png.c  ui_img_04d_png.c  ui_img_04n_png.c  ui_img_09d_png.c  ui_img_09n_png.c  ui_img_0d_png.c  ui_img_0n_png.c  ui_img_10d_png.c  ui_img_10n_png.c  ui_img_11d_png.c  ui_img_11n_png.c  ui_img_13d_png.c  ui_img_13n_png.c  ui_img_1d_png.c  ui_img_1n_png.c  ui_img_2_png.c  ui_img_3_png.c  ui_img_45_png.c  ui_img_48_png.c  ui_img_50d_png.c  ui_img_50n_png.c  ui_img_51_png.c  ui_img_53_png.c  ui_img_55_png.c  ui_img_56_png.c  ui_img_57_png.c  ui_img_61_png.c  ui_img_63_png.c  ui_img_65_png.c  ui_img_66_png.c  ui_img_67_png.c  ui_img_71_png.c  ui_img_73_png.c  ui_img_75_png.c  ui_img_77_png.c  (+20 more)
Export/ui/screens/: ui_SetupScreen.c  ui_WeatherstationScreen.c
assets/: ui_font_FreeSans10.fcfg  ui_font_FreeSans14.fcfg  ui_font_FreeSans16.fcfg  ui_font_FreeSans18.fcfg  ui_font_FreeSans20.fcfg  ui_font_FreeSans22.c  ui_font_FreeSans22.fcfg  ui_font_FreeSans24.c  ui_font_FreeSans24.fcfg  ui_font_FreeSans26.fcfg  ui_font_FreeSans30.fcfg  ui_font_FreeSans34.c  ui_font_FreeSans34.fcfg  ui_font_FreeSans36.c  ui_font_FreeSans36.fcfg  ui_font_FreeSansBold38.fcfg  ui_font_FreeSansBold44.fcfg  ui_font_FreeSansBold46.fcfg  ui_font_FreeSansBold48.fcfg  ui_font_FreeSansBold60.c  ui_font_FreeSansBold60.fcfg  ui_font_FreeSansBold62.c  ui_font_FreeSansBold62.fcfg
