SET(SOURCES screens/ui_SetupScreen.c
    screens/ui_WeatherstationScreen.c
    ui.c
    components/ui_comp_hook.c
    ui_helpers.c
    ui_events.cpp
    images/ui_img_wifi_off_png.c
    images/ui_img_1d_png.c
    images/ui_img_cloud_png.c
    images/ui_img_uv_png.c
    images/ui_img_arrow_png.c
    images/ui_img_sunrise_png.c
    images/ui_img_sunset_png.c
    images/ui_img_humidity_png.c
    images/ui_img_pressure_png.c
    images/ui_img_battery_png.c
    images/ui_img_clock_png.c
    images/ui_img_0d_png.c
    images/ui_img_0n_png.c
    images/ui_img_1n_png.c
    images/ui_img_2_png.c
    images/ui_img_3_png.c
    images/ui_img_45_png.c
    images/ui_img_48_png.c
    images/ui_img_51_png.c
    images/ui_img_53_png.c
    images/ui_img_55_png.c
    images/ui_img_56_png.c
    images/ui_img_57_png.c
    images/ui_img_61_png.c
    images/ui_img_63_png.c
    images/ui_img_65_png.c
    images/ui_img_66_png.c
    images/ui_img_67_png.c
    images/ui_img_71_png.c
    images/ui_img_73_png.c
    images/ui_img_75_png.c
    images/ui_img_77_png.c
    images/ui_img_80_png.c
    images/ui_img_81_png.c
    images/ui_img_82_png.c
    images/ui_img_85_png.c
    images/ui_img_86_png.c
    images/ui_img_95_png.c
    images/ui_img_96_png.c
    images/ui_img_99_png.c
    images/ui_img_wifi_on_png.c
    fonts/ui_font_FreeSans10.c
    fonts/ui_font_FreeSans14.c
    fonts/ui_font_FreeSans16.c
    fonts/ui_font_FreeSans18.c
    fonts/ui_font_FreeSans20.c
    fonts/ui_font_FreeSans22.c
    fonts/ui_font_FreeSans24.c
    fonts/ui_font_FreeSans26.c
    fonts/ui_font_FreeSans30.c
    fonts/ui_font_FreeSans34.c
    fonts/ui_font_FreeSans36.c
    fonts/ui_font_FreeSansBold38.c
    fonts/ui_font_FreeSansBold44.c
    fonts/ui_font_FreeSansBold46.c
    fonts/ui_font_FreeSansBold48.c
    fonts/ui_font_FreeSansBold60.c
    fonts/ui_font_FreeSansBold62.c)

add_library(ui ${SOURCES})
